data/all_generated_tests/raw_wast_tests/loop_ImproperFunctionCallorReturnHandling_927.wast
;; 8. **Test Case**: Design a loop performing multiple direct and indirect calls, ensuring the indirect calls have complex dependencies on the function table.    - **Constraint Check**: Confirm synchronized use of direct and indirect calls with correct return values.    - **Improper Function Call or Return Handling**: Desynchronization in direct and indirect call handling within loop contexts.

(assert_invalid
  (module
    (table 1 funcref)
    (elem (i32.const 0) $func1)
    (func $func1 (result i32) (i32.const 42))
    (func (result i32)
      (loop (result i32)
        (call_indirect (type 0) (i32.const 0))
        (call $func1)
      )
    )
  )
  "type mismatch"
)